# newsletter

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml  test_data.sql
migrations/: 20250214154539_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
